...
	}
	
	private func getChannalFlow() -> UINavigationController {
		let configurator = ConversationConfigurator()
		let conversationsController = configurator.configure()
		let navigation = UINavigationController(rootViewController: conversationsController)
		navigation.tabBarItem.title = "Channels"
		navigation.tabBarItem.image = UIImage(systemName: "bubble.left.and.bubble.right")
		return navigation
	}
	
	private func getSettingslFlow() -> UINavigationController {
		let themeManager = ThemeManager()
...
	}
	
	private func getProfilelFlow() -> UINavigationController {
        let configurator = ProfileConfigurator()
        let profileController = configurator.configure()
		let navigationController = UINavigationController(rootViewController: profileController)
		profileController.tabBarItem.title = "Profile"
		profileController.tabBarItem.image = UIImage(systemName: "person.circle")
		return navigationController
	}
}

