...
		self.userProfile = dependencies?.userProfile
	}
	func makeState(requst: EditProfileModel.Request) {
		switch requst {
		case .edit:
			let profileData = ProfileModel.Response.ProfileData(
				title: "Edit Profile",
				userProfile: self.userProfile
			)
			self.presenter?.buildState(response: .edit(profileData))
		case .save:
			let profileData = ProfileModel.Response.ProfileData(
				title: "Saving data",
...
 func makeState(requst: ProfileModel.Request) {
	 switch requst {
	 case .fetch:
		 fetchUser()
	 case .start:
		 let profileData = ProfileModel.Response.ProfileData(
			 title: "My Profile",
			 userProfile: self.userProfile
		 )
		 self.presenter?.buildState(response: .start(profileData))
	 case .edit:
		 let profileData = ProfileModel.Response.ProfileData(
			 title: "Edit Profile",
...
